tests/pos/i18533b/Cat.java
// test: -jvm 21+

package i18533;

public final class Cat extends Pet {

}
