tests/neg/i18533/Cat_SCALA_ONLY.java
package i18533;

public final class Cat extends Pet {

}
